--- a/src/components/styles/footerComponent.css
+++ b/src/components/styles/footerComponent.css
@@ -1,3 +1,7 @@
 .footerComponent {
-    background-color: green;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:200px;
+    background:rgba(0,0,0,0.3);
 }
