--- a/src/components/styles/header/headerComponent.css
+++ b/src/components/styles/header/headerComponent.css
@@ -1,3 +1,8 @@
 .headerComponent {
-    background-color: red;
+    background-color: #1b3c43;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    z-index: 1;
 }
