--- a/src/components/styles/header/meniuComponent.css
+++ b/src/components/styles/header/meniuComponent.css
@@ -1,3 +1,9 @@
-.mainComponent {
-    background-color: blue;
+.meniuComponent {
+    margin-top:20px;
+    display:flex;
+    border-radius: 20px;
+    background: linear-gradient(to right, #0aa3c1, #0e9fb7);
+    width: 35%;
+    align-items: center;
+    justify-content: center;
 }
