--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: linear-gradient(to right, #217f7a, #1b3c6b);
+  font-family: 'Open Sans', sans-serif;
 }
