--- a/src/components/styles/content/usersTableComponent.css
+++ b/src/components/styles/content/usersTableComponent.css
@@ -1,11 +1,9 @@
-.usersTableComponent {
-    height:400px;
-}
+.usersTableComponent {height:400px;}
 
 #contactsTable{
     border-collapse: collapse;
     margin-left:50px;
-    font-size: 0.96 em;
+    font-size: 0.96em;
 }
 
 #contactsTable tr:last-child td:first-child {
@@ -24,7 +22,7 @@
  #contactsTable tr:first-child th:last-child,
  table.Info tr:first-child td:last-child {
      border-top-right-radius: 10px;
- }
+}
 
 
 #contactsTable th{
@@ -45,11 +43,8 @@
     background-color: #ffffff;
 }
 
-#contactsTable tr:hover td {
-    background-color:rgb(225,244, 248);
-    }
+#contactsTable tr:hover td {background-color:rgb(225,244, 248);}
 
 #contactsTable i {margin-right: 8px;}
-
-
-/*rgb(15,115,147), rgb(29,178,214)*/
+#contactsTable #nameHeader {padding-left: 20px;}
+.fa-arrow-down {margin-left: 30px; cursor: pointer;}
