--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@ body {
   background: linear-gradient(to right, #217f7a, #1b3c6b);
   font-family: 'Open Sans', sans-serif;
 }
+
+input:focus, textarea:focus, select:focus{
+  outline: none;
+}
