--- a/src/components/styles/content/toolbarComponent.css
+++ b/src/components/styles/content/toolbarComponent.css
@@ -9,11 +9,15 @@
 
 .inputField {
     padding:10px 50px 10px 50px;
-    margin-right: 20px;
-    margin-left: 40px;
     border-radius:20px;
     border:2px solid black;
     position: relative;
+}
+
+.wrapper {
+    margin:0 20px 0 40px;
+    border:1px solid grey;
+    border-radius: 20px;
 }
 
 ::-webkit-input-placeholder { 
@@ -47,8 +51,6 @@ input {
     appearance: none;
     font-size:1em; 
     padding:10px 50px 10px 50px;
-    margin-right: 20px;
-    margin-left: 40px;
     border-radius:20px;
     min-width: 193px;
     border:2px solid black;
@@ -74,4 +76,24 @@ label.wrap {
     height: 45px;    
     position: relative;
     display: block;
+}
+
+#addNewBtn {
+    color:white;
+    border-radius:35px;
+    margin:0 90px 5px 5px;
+    padding: 5px 25px 5px 2px;
+    background-color: rgb(30 108 102);
+    text-transform: uppercase;
+    cursor: pointer;
+    position: absolute;
+    right:0;
+}
+
+#addNewBtn i {
+    background-color: rgb(22 85 79);
+    border-radius:20px;
+    padding: 8px 10px 8px 10px;
+    margin-right: 15px;
+    margin-top:0;
 }
